--- a/backupCurrentDynamicWORK.html
+++ b/backupCurrentDynamicWORK.html
@@ -60,51 +60,51 @@
         <option value="£150m+">£150m+</option>
     </select>
 </div>
-<div id="sumDiv" class="testdiv">  
+<div id="sumDiv">  
 <div>
     <label class="description" for="ESPValue1">full time employment opportunity created</label>
-    <input id="ESPValue1" name="ESPValue1" class="element text medium" type="text" maxlength="255" value="27165" readonly="true"/>
+    <input id="ESPValue1" name="ESPValue1" class="element text medium" type="number" maxlength="255" value="27165" readonly="true"/>
 </div>
 <div>
     <label class="description" for="ESPValue2">part time employment opportunity created</label>
-    <input id="ESPValue2" name="ESPValue2" class="element text medium" type="text" maxlength="255" value="3241"  readonly="true"/>
+    <input id="ESPValue2" name="ESPValue2" class="element text medium" type="number" maxlength="255" value="3241"  readonly="true"/>
 </div>
 <div>
     <label class="description" for="ESPValue3">apprenticeship opportunity created</label>
-    <input id="ESPValue3" name="ESPValue3" class="element text medium" type="text" maxlength="255" value="27165" readonly="true"/>
+    <input id="ESPValue3" name="ESPValue3" class="element text medium" type="number" maxlength="255" value="27165" readonly="true"/>
 </div>
 <div>
     <label class="description" for="ESPValue4">apprenticeship weeks on site</label>
-    <input id="ESPValue4" name="ESPValue4" class="element text medium" type="text" maxlength="255" value="185.47" readonly="true" />
+    <input id="ESPValue4" name="ESPValue4" class="element text medium" type="number" maxlength="255" value="185.47" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue5">school pupils engaged no of pupils</label>
-    <input id="ESPValue5" name="ESPValue5" class="element text medium" type="text" maxlength="255" value="32" readonly="true" />
+    <input id="ESPValue5" name="ESPValue5" class="element text medium" type="number" maxlength="255" value="32" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue6">work experience under 19 number of weeks</label>
-    <input id="ESPValue6" name="ESPValue6" class="element text medium" type="text" maxlength="255" value="20.92" readonly="true" />
+    <input id="ESPValue6" name="ESPValue6" class="element text medium" type="number" maxlength="255" value="20.92" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue7">work experience over 19 number of weeks</label>
-    <input id="ESPValue7" name="ESPValue7" class="element text medium" type="text" maxlength="255" value="320" readonly="true" />
+    <input id="ESPValue7" name="ESPValue7" class="element text medium" type="number" maxlength="255" value="320" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue8">proffesional development training number of days</label>
-    <input id="ESPValue8" name="ESPValue8" class="element text medium" type="text" maxlength="255" value="50" readonly="true" />
+    <input id="ESPValue8" name="ESPValue8" class="element text medium" type="number" maxlength="255" value="50" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue9">health and safety training number of days</label>
-    <input id="ESPValue9" name="ESPValue9" class="element text medium" type="text" maxlength="255" value="100" readonly="true" />
+    <input id="ESPValue9" name="ESPValue9" class="element text medium" type="number" maxlength="255" value="100" readonly="true" />
 </div>
 <div>
     <label class="description" for="ESPValue10">kier ambassadors trained</label>
-    <input id="ESPValue10" name="ESPValue10" class="element text medium" type="text" maxlength="255" value="50" readonly="true" />
+    <input id="ESPValue10" name="ESPValue10" class="element text medium" type="number" maxlength="255" value="50" readonly="true" />
 </div>
 
 <div>
     <label class="outputText" for="GrandTotal">Total</label>
-    <input id="GrandTotal" name="GrandTotal" class="element text medium" type="text" maxlength="255"  readonly="true" />
+    <input id="GrandTotal" name="GrandTotal" class="element text medium" type="number" maxlength="255"  readonly="true" />
 </div>
 
 </div>
@@ -2601,28 +2601,28 @@
 
 <script>
 
-function myLoad() {
-        var ESPValue1   = 1;
-        var ESPValue2   = 1;
-        var ESPValue3   = 1;
-        var ESPValue4   = 1 ;
-        var ESPValue5   = 1;
-        var ESPValue6   = 1;
-        var ESPValue7   = 1;
-        var ESPValue8   = 1;
-        var ESPValue9   = 1;
-        var ESPValue10 = 1;
-    $("#ESPValue1").value = ESPValue1;
-    $("#ESPValue2").value = ESPValue2;
-    $("#ESPValue3").value = ESPValue3;
-    $("#ESPValue4").value = ESPValue4;
-    $("#ESPValue5").value = ESPValue5;
-    $("#ESPValue6").value = ESPValue6;
-    $("#ESPValue7").value = ESPValue7;
-    $("#ESPValue8").value = ESPValue8;
-    $("#ESPValue9").value = ESPValue9;
-    $("#ESPValue10").value = ESPValue10;
-}
+// function myLoad() {
+//         var ESPValue1   = 1;
+//         var ESPValue2   = 1;
+//         var ESPValue3   = 1;
+//         var ESPValue4   = 1 ;
+//         var ESPValue5   = 1;
+//         var ESPValue6   = 1;
+//         var ESPValue7   = 1;
+//         var ESPValue8   = 1;
+//         var ESPValue9   = 1;
+//         var ESPValue10 = 1;
+//     $("#ESPValue1").value = ESPValue1;
+//     $("#ESPValue2").value = ESPValue2;
+//     $("#ESPValue3").value = ESPValue3;
+//     $("#ESPValue4").value = ESPValue4;
+//     $("#ESPValue5").value = ESPValue5;
+//     $("#ESPValue6").value = ESPValue6;
+//     $("#ESPValue7").value = ESPValue7;
+//     $("#ESPValue8").value = ESPValue8;
+//     $("#ESPValue9").value = ESPValue9;
+//     $("#ESPValue10").value = ESPValue10;
+// }
 
 function myCalculate(){
   var projectValue = $("#projectValue").val();
@@ -2652,7 +2652,7 @@ function myCalculate(){
   
  // var tableToUse = geographicalLocation === "" ? productOrigin : geographicalLocation;
   
-  $("input[type='text']").each(function(i){
+  $("input[type='number']").each(function(i){
     
     // Current product ID, e.g. "Apple", "Apricot", etc.
 	  var currentProductId = $(this).attr('id');
@@ -2665,8 +2665,6 @@ function myCalculate(){
 
 	// Calculate the figure and update the result element.
     result.text($(this).val() * multiplier); 
-    
-
 
 	// Remove any previously added <span> result elements.
 	$(this).next("span").remove();
@@ -2682,17 +2680,20 @@ function myCalculate(){
           $(selector).each(function() {
             $(this).find("span").each(function() {
               sum += parseInt($(this).html());
+              $('#GrandTotal').val(parseInt($(this).html()));
             });
           });
           return sum;
-          $("#GrandTotal")=sum ;
+         // $("#GrandTotal")=sum ;
+        //   var textvalue = $("#<span name='result'>").text();
+        //     $('#GrandTotal').val(textvalue);
         }
     console.log(getDivSum("#sumDiv"))
     $("#GrandTotal").next().html(getDivSum("#sumDiv"))
         $(document).ready(function() {
           console.log(getDivSum("#sumDiv"));
         //$("#GrandTotal.val();
-        var someValue = $(".outputText").text();
+        var someValue = $("sumDiv").text();
         console.log("Value is "+someValue);
 
         });
@@ -2702,7 +2703,7 @@ function myCalculate(){
 
 }
 
-myLoad();
+// myLoad();
 
 $('.select').on('change', myCalculate);
 $("input[type='text']").on('keyup', myCalculate);
